Revise legal documents and update last modified date
Updated the legal documentation page with the latest information.

--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
     </div>
     
     <div class="footer">
-        <p><em>Last updated: [Date]</em></p>
+        <p><em>Last updated: 12/2025</em></p>
         <p>For questions or concerns, please contact us at <a href="mailto:automation@notiq.io">automation@notiq.io</a></p>
     </div>
 </body>
 </html>
+
 
